# multicraton-hsm-testnet

./: .editorconfig  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ENHANCED_FEATURES.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SPONSORS.md  build.rs  deny.toml  package.json  rustfmt.toml
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  cla.yml  release.yml  security-audit.yml
benches/: crypto_bench.rs  pkcs11_abi_bench.rs  softhsm2.conf
bindings/go/: README.md  client.go  client_test.go  go.mod  mechanisms.go
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/craton_hsm/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
craton-hsm-daemon/: Cargo.toml  build.rs
craton-hsm-daemon/proto/: craton_hsm.proto
craton-hsm-daemon/src/: config.rs  main.rs  server.rs  tls.rs
craton-hsm-daemon/tests/: cluster_integration.rs
craton-hsm-rest/: Cargo.toml
craton-hsm-rest/src/: auth.rs  config.rs  dto.rs  errors.rs  lib.rs  main.rs  router.rs  routes.rs
deploy/: .dockerignore  Dockerfile  docker-compose.cluster.yml  gen-test-certs.sh
deploy/cluster-configs/: node1.toml  node2.toml  node3.toml
deploy/helm/craton-hsm/: Chart.yaml  values.schema.json  values.yaml
deploy/helm/craton-hsm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret-security.yaml  service.yaml  serviceaccount.yaml
docs/: PRESENTATION.md  README.md  api-reference.md  architecture.md  audit-scope.md  benchmarks.md  cluster-admin-commands.md  configuration-reference.md  examples.md  faq.md  fips-140-3-certification.md  fips-gap-analysis.md  fips-mode-guide.md  fork-safety.md  future-work-guide.md  install.md  language-bindings.md  migration-guide.md  operator-runbook.md  performance-tuning.md  post-quantum-crypto.md  postman-grpc-manual-tests.md  release-signing.md  rest-api.md  security-model.md  security-policy.md  security-review-checklist.md  tested-platforms.md  troubleshooting.md  vendor-extensions.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_attributes.rs  fuzz_buffer_overflow.rs  fuzz_c_abi.rs  fuzz_crypto_ops.rs  fuzz_derive_key.rs  fuzz_init_token.rs  fuzz_keygen.rs  fuzz_multipart_crypto.rs  fuzz_rsa_ops.rs  fuzz_session_lifecycle.rs  fuzz_set_attribute.rs  fuzz_wrap_unwrap.rs
kreya/: CratonHSM-gRPC.krproj  default.krenv  directory.krpref  remote.krenv
kreya/craton-hsm/HsmService/01-InitToken/: InitToken-request.json  InitToken.krop
kreya/craton-hsm/HsmService/02-OpenSession/: OpenSession-request.json  OpenSession.krop
kreya/craton-hsm/HsmService/03-LoginSO/: LoginSO-request.json  LoginSO.krop
kreya/craton-hsm/HsmService/04-GetTokenInfo/: GetTokenInfo-request.json  GetTokenInfo.krop
kreya/craton-hsm/HsmService/05-GenerateRandom/: GenerateRandom-request.json  GenerateRandom.krop
kreya/craton-hsm/HsmService/06-DigestSHA256/: DigestSHA256-request.json  DigestSHA256.krop
kreya/craton-hsm/HsmService/07-DigestSHA512/: DigestSHA512-request.json  DigestSHA512.krop
scripts/: build-native.sh  ci-local.sh  local-ci.sh
src/: core.rs  error.rs  lib.rs  platform_acl.rs
src/advanced/: analytics.rs  attestation.rs  fhe.rs  gpu_crypto.rs  mod.rs  policy.rs  quantum_resistant.rs  stark.rs  threshold.rs  tpm.rs  wasm_plugin.rs  zkp.rs
src/audit/: log.rs  mod.rs
src/cluster/: consensus.rs  coordinator.rs  membership.rs  mod.rs  network.rs  replication.rs
src/config/: config.rs  mod.rs
src/crypto/: awslc_backend.rs  backend.rs  bls.rs  derive.rs  digest.rs  drbg.rs  ec_extended.rs  encrypt.rs  enhanced_backend.rs  enhanced_rustcrypto_backend.rs  falcon.rs  frodokem.rs  hkdf_mech.rs  hybrid.rs  hybrid_kem.rs  integrity.rs  keygen.rs  mac.rs  mechanisms.rs  mlock.rs  mod.rs  pairwise_test.rs  pqc.rs  rustcrypto_backend.rs  self_test.rs  sign.rs  sp800_108.rs  wrap.rs
src/metrics/: collector.rs  mod.rs  server.rs
src/pkcs11_abi/: constants.rs  functions.rs  mod.rs  params.rs  types.rs
src/pkcs11_abi/ext/: hybrid_wrap.rs  interface_list.rs  kem_v32.rs  mod.rs  vendor_table.rs
src/service/: attest.rs  caps.rs  kem.rs  keygen.rs  mod.rs  rotate.rs  sign.rs  wrap.rs
src/session/: enhanced_manager.rs  handle.rs  manager.rs  mod.rs  session.rs  tls_cache.rs
src/store/: attributes.rs  backup.rs  encrypted_store.rs  key_cache.rs  key_material.rs  lockout_store.rs  mod.rs  object.rs  wrapped_key.rs
src/token/: mod.rs  slot.rs  token.rs
tests/: attribute_management.rs  attribute_validation.rs  audit_and_integrity.rs  backup_restore.rs  buffer_limits.rs  concurrent_initialize.rs  concurrent_session_stress.rs  concurrent_stress.rs  crypto_error_paths.rs  crypto_vectors.rs  crypto_vectors_phase2.rs  digest_abi.rs  drbg_tests.rs  ec_curves_extended.rs  ecdh_params_abi.rs  ecdsa_prehash_conformance.rs  fips_approved_mode.rs  fork_detection.rs  gcm_counter_safety.rs  gcm_params_abi.rs  hmac_abi.rs  integrity_tests.rs  kdf_abi.rs  key_derivation_abi.rs  key_lifecycle_abi.rs  key_wrapping_abi.rs  metrics_integration.rs  multi_node_userspace.rs  multi_slot.rs  multipart_encrypt_decrypt.rs  multipart_sign_verify.rs  negative_edge_cases.rs  nist_test_vectors.rs  oaep_params_abi.rs  operation_state.rs  pairwise_consistency.rs  persistence.rs  pkcs11_compliance.rs  pkcs11_compliance_extended.rs  pkcs11_conformance.rs  (+18 more)
tests/interop/: java_sunpkcs11.sh  openssl_pkcs11.sh  pkcs11.cfg
tools/: compute-integrity-hmac.ps1  compute-integrity-hmac.sh  generate-integrity-keypair.ps1  generate-integrity-keypair.sh  sign-integrity.ps1  sign-integrity.sh
tools/craton-hsm-admin/: Cargo.toml
tools/craton-hsm-admin/src/: main.rs  output.rs
tools/craton-hsm-admin/src/commands/: audit.rs  backup.rs  key.rs  mod.rs  pin.rs  token.rs
tools/pkcs11-spy/: Cargo.toml
tools/pkcs11-spy/src/: lib.rs  loader.rs  logger.rs
(+17 files in other folders)
