[workspace]
members = ["tools/craton-hsm-admin", "tools/pkcs11-spy", "craton-hsm-daemon"]

[package]
name = "craton-hsm"
version = "0.9.1"
edition = "2021"
description = "A production-grade PKCS#11 v3.0-compliant Software HSM written in Rust"
license = "Apache-2.0"
repository = "https://github.com/craton-co/craton-hsm-core"
homepage = "https://github.com/craton-co/craton-hsm-core"
keywords = ["pkcs11", "hsm", "cryptography", "security", "fips"]
categories = ["cryptography", "api-bindings"]
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rustcrypto-backend"]
rustcrypto-backend = []
awslc-backend = ["dep:aws-lc-rs"]
fips = []

[dependencies]
# Cryptographic primitives
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
p384 = { version = "0.13", features = ["ecdh", "ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "verifying", "hazmat"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ctr = "0.9"
cipher = "0.5"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
subtle = "2"
hkdf = "0.12"
aes-kw = "0.2"

# Post-quantum cryptography (Phase 3)
ml-kem = { version = "0.3.0-rc.0", features = ["getrandom"] }
ml-dsa = "0.1.0-rc.7"
slh-dsa = "0.2.0-rc.4"

# RNG for PQC crate compatibility (rand_core 0.10 ecosystem).
# The PQC crates (ml-kem, ml-dsa, slh-dsa) depend on rand_core 0.10 / getrandom 0.4,
# while the classical RustCrypto crates still use rand_core 0.6 / getrandom 0.2.
# We alias the newer versions to avoid name collisions until the ecosystem converges.
# TODO: Remove aliases once RustCrypto migrates to rand_core 0.10 (track: https://github.com/RustCrypto/traits/issues/1438)
getrandom_new = { package = "getrandom", version = "0.4", features = ["sys_rng"] }
rand_core_new = { package = "rand_core", version = "0.10" }

# Key material safety
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"

# Storage
redb = "3"
fs2 = "0.4"

# Concurrency
parking_lot = "0.12"
dashmap = "6"

# Config and logging
toml = "1"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["max_level_info", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["json"] }

# Randomness
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Error handling
thiserror = "2"

# Serialization for store objects
serde_json = "1"

# Hex encoding (used by integrity test)
hex = "0.4"

# Optional FIPS-validated backend
aws-lc-rs = { version = "1", features = ["fips"], optional = true }

# Unix process ID for fork detection
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows memory locking (VirtualLock/VirtualUnlock)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Memory", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_Security", "Win32_Security_Authorization"] }

[dev-dependencies]
tempfile = "3"
hex = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }
libloading = "0.9"
# craton_hsm-awslc: only available with the enterprise repo; see docs/fips-mode-guide.md
# To run FIPS backend tests locally, clone craton_hsm-enterprise alongside this repo and uncomment:
# craton_hsm-awslc = { path = "../craton_hsm-enterprise/craton_hsm-awslc" }

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "pkcs11_abi_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[profile.bench]
lto = "thin"
codegen-units = 4
