[workspace]
members = ["tools/craton-hsm-admin", "tools/pkcs11-spy", "craton-hsm-daemon"]

[package]
name = "craton-hsm"
version = "0.9.1"
edition = "2021"
description = "A production-grade PKCS#11 v3.0-compliant Software HSM written in Rust"
license = "Apache-2.0"
repository = "https://github.com/craton-co/craton-hsm-core"
homepage = "https://github.com/craton-co/craton-hsm-core"
keywords = ["pkcs11", "hsm", "cryptography", "security", "fips"]
categories = ["cryptography", "api-bindings"]
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["rustcrypto-backend"]
rustcrypto-backend = []
awslc-backend = ["dep:aws-lc-rs"]
fips = []

# Core Advanced Features (stable)
wrapped-keys = ["serde_with"]
quantum-resistant = []
observability = ["prometheus", "axum"]

# Falcon (FN-DSA) signatures via PQClean reference code (C FFI).
# Keeps the default pure-Rust build C-dep-free; only compiled when requested.
falcon-sig = ["dep:pqcrypto-falcon", "dep:pqcrypto-traits"]

# FrodoKEM (conservative-lattice KEM) via PQClean reference code (C FFI).
frodokem-kem = ["dep:pqcrypto-frodo", "dep:pqcrypto-traits"]

# Advanced Feature Sets (placeholder implementations for cutting-edge capabilities)
zkp = []
threshold = []
gpu-acceleration = ["dep:rayon"]
ml-analytics = []
policy-engine = []
cloud-kms = []
fhe = []
advanced-serialization = []
performance = []
networking = []
enhanced-storage = []

# ── Cutting-edge cryptographic capabilities ──────────────────────────────────

# BLAKE3: parallel tree-hashing, 3× faster than SHA-256, used in BAO/Zcash
blake3-hash = ["dep:blake3"]

# Hybrid KEM: X25519 + ML-KEM-768 dual-encapsulation (NIST IR 8413, CNSA 2.0)
hybrid-kem = ["dep:x25519-dalek", "dep:chacha20poly1305"]

# ChaCha20-Poly1305 / XChaCha20 AEAD — nonce-misuse resistant AEAD
chacha20-aead = ["dep:chacha20poly1305"]

# Argon2id: OWASP-recommended memory-hard KDF replacing PBKDF2 for new keys
argon2-kdf = ["dep:argon2"]

# BLS12-381: aggregatable pairing-based signatures (Ethereum 2.0, threshold schemes)
bls-signatures = ["dep:blst"]

# OPAQUE: disabled due to opaque-ke v2 pinning curve25519-dalek pre-release
# which conflicts with x25519-dalek. Re-enable when opaque-ke v3+ is available.
# opaque-auth = ["dep:opaque-ke", "dep:generic-array-opaque"]

# STARK proofs: transparent, post-quantum ZK proofs (Polygon Miden / Winterfell)
stark-proofs = ["dep:winterfell"]

# Fully Homomorphic Encryption: compute on encrypted data without decryption (Zama TFHE-rs)
fhe-compute = ["dep:tfhe"]

# TPM 2.0: hardware root-of-trust, PCR-sealed key storage, platform attestation
tpm-binding = ["dep:tss-esapi"]

# QUIC transport: 0-RTT encrypted cluster networking via quinn (HTTP/3 transport)
quic-transport = ["dep:quinn"]

# Noise Protocol Framework: Signal-protocol-grade encrypted P2P channels via snow
noise-protocol = ["dep:snow"]

# WebAssembly plugins: sandboxed custom crypto extensions via wasmtime + cranelift
wasm-plugins = ["dep:wasmtime"]

# ONNX analytics: pure-Rust ML inference for anomaly detection via tract-onnx
onnx-analytics = ["dep:tract-onnx"]

# Verifiable OPRF: disabled due to curve25519-dalek conflict with opaque-ke
# voprf-protocol = ["dep:voprf"]

# Combined Feature Sets
advanced-all = [
    "wrapped-keys", "quantum-resistant", "observability", "zkp", "threshold",
    "gpu-acceleration", "ml-analytics", "policy-engine", "cloud-kms", "fhe",
    "advanced-serialization", "performance", "networking", "enhanced-storage",
    # Cutting-edge additions
    "blake3-hash", "hybrid-kem", "chacha20-aead", "argon2-kdf",
    "bls-signatures", "stark-proofs", "noise-protocol", "onnx-analytics",
    # Broader PQC algorithm coverage via pqcrypto-* (C FFI)
    "falcon-sig", "frodokem-kem"
    # Note: fhe-compute, tpm-binding, quic-transport, wasm-plugins excluded from
    # advanced-all due to large build footprint — enable individually as needed.
    # voprf-protocol excluded due to curve25519-dalek version conflict with opaque-auth.
]
enterprise = ["wrapped-keys", "observability"]

[dependencies]
# Cryptographic primitives
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
p384 = { version = "0.13", features = ["ecdh", "ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "verifying", "hazmat"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ctr = "0.9"
cipher = "0.5"
hmac = "0.12"
sha1 = "0.10"
# `asm` enables hand-tuned SHA-256 assembly on x86_64 (SHA-NI when available
# at runtime via `cpufeatures`) and ARMv8 SHA2 extensions on aarch64. Pure-Rust
# fallback is retained automatically on targets without the asm backend.
sha2 = { version = "0.10", features = ["asm"] }
sha3 = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
subtle = "2"
hkdf = "0.12"
aes-kw = "0.2"

# Post-quantum cryptography (Phase 3)
ml-kem = { version = "0.3.0-rc.0", features = ["getrandom"] }
ml-dsa = "0.1.0-rc.7"
slh-dsa = "0.2.0-rc.4"

# Additional PQC algorithms via PQClean reference code (C FFI, feature-gated).
# `default-features = false` disables the crate's AVX2 auto-selection so builds
# stay portable; PQClean falls back to the reference implementation.
# Gated so the default pure-Rust library remains C-dep-free.
pqcrypto-falcon = { version = "0.4", default-features = false, optional = true }
pqcrypto-frodo  = { version = "0.4", default-features = false, optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

# RNG for PQC crate compatibility (rand_core 0.10 ecosystem).
# The PQC crates (ml-kem, ml-dsa, slh-dsa) depend on rand_core 0.10 / getrandom 0.4,
# while the classical RustCrypto crates still use rand_core 0.6 / getrandom 0.2.
# We alias the newer versions to avoid name collisions until the ecosystem converges.
# TODO: Remove aliases once RustCrypto migrates to rand_core 0.10 (track: https://github.com/RustCrypto/traits/issues/1438)
getrandom_new = { package = "getrandom", version = "0.4", features = ["sys_rng"] }
rand_core_new = { package = "rand_core", version = "0.10" }

# Key material safety
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
arrayvec = "0.7"

# Storage
redb = "3"
fs2 = "0.4"

# Concurrency
parking_lot = "0.12"
dashmap = "6"

# Config and logging
toml = "1"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["max_level_info", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["json"] }

# Observability and metrics
prometheus = { version = "0.13", optional = true }
axum = { version = "0.7", features = ["tokio"], optional = true }
tokio = { version = "1", features = ["full"] }

# Randomness
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Error handling
thiserror = "2"

# Serialization for store objects
serde_json = "1"

# Hex encoding (used by integrity test)
hex = "0.4"

# CBOR codec for attestation tokens (IETF RATS EAT) and AWS Nitro NSM
# request framing in src/advanced/attestation.rs. Pure Rust, no C deps.
# We use ciborium (the maintained successor) rather than the unmaintained
# serde_cbor crate.
ciborium = "0.2"

# Optional FIPS-validated backend
aws-lc-rs = { version = "1", features = ["fips"], optional = true }

# Enhanced cryptography and algorithms
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ed448 = "0.1"

# PKCS parsing and ASN.1 handling for wrapped key import/export
pkcs8 = "0.10"
pkcs12 = { version = "0.2.0-pre.0" }
der = "0.7"
pem = "3.0"
base64 = "0.21"

# Enhanced JSON handling
serde_with = { version = "3.4", optional = true }

# HSM clustering and distributed operations
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
fastrand = "2"
bincode = "1"

# Network and TLS for clustering
tokio-rustls = "0.24"
rustls = "0.21"
webpki-roots = "0.25"

# Additional dependencies for enhanced features
num_cpus = "1"
chrono = { version = "0.4", features = ["serde"] }
bitflags = "2"

# CPU parallelism for batch crypto operations (gpu-acceleration feature)
rayon = { version = "1.10", optional = true }

# ── Cutting-edge optional dependencies ───────────────────────────────────────

# BLAKE3: parallel Merkle-tree hash (BLAKE3 team / Zcash Foundation).
# The `rayon` feature unlocks multi-threaded tree hashing for large inputs;
# worth enabling because the blake3-hash feature is specifically for bulk
# hashing workloads where parallelism pays off.
blake3 = { version = "1", features = ["rayon"], optional = true }

# X25519 Diffie-Hellman for Hybrid KEM (static_secrets needed for long-term keys)
x25519-dalek = { version = "2", features = ["static_secrets"], optional = true }

# ChaCha20-Poly1305 / XChaCha20-Poly1305 AEAD (RustCrypto)
chacha20poly1305 = { version = "0.10", optional = true }

# Argon2id memory-hard KDF (replaces PBKDF2 for newly provisioned tokens)
argon2 = { version = "0.5", optional = true }

# blst: BLS12-381 signatures — Ethereum Foundation reference impl (C-backed, ~2× faster than pure Rust)
blst = { version = "0.3", optional = true }

# opaque-ke: disabled — pins curve25519-dalek =4.0.0-pre.1, conflicts with x25519-dalek
# opaque-ke = { version = "2", optional = true }
# generic-array-opaque = { package = "generic-array", version = "0.14", optional = true }

# Winterfell: STARK proof system by Polygon Miden — transparent, post-quantum ZK
winterfell = { version = "0.9", optional = true }

# tfhe-rs: Fully Homomorphic Encryption by Zama — compute on encrypted integers
# WARNING: increases compile time significantly; enable only when needed
tfhe = { version = "0.10", features = ["integer"], optional = true }

# tss-esapi: TPM 2.0 TSS Enhanced API — requires libtss2 system library on Linux
# Provides hardware root-of-trust: PCR sealing, platform attestation, TPM RNG
tss-esapi = { version = "=8.0.0-alpha.2", optional = true }

# quinn: QUIC transport (HTTP/3) — 0-RTT reconnects, built-in TLS 1.3, stream multiplexing
# Note: uses rustls 0.23 independently of the cluster's rustls 0.21 (feature-isolated)
quinn = { version = "0.11", optional = true }

# snow: Noise Protocol Framework — Signal-grade encrypted channels without PKI
snow = { version = "0.9", optional = true }

# wasmtime: WebAssembly runtime with Cranelift JIT — sandboxed crypto plugin execution
# WARNING: large dependency (~50 MB debug); enable only for plugin deployments
wasmtime = { version = "25", features = ["cranelift"], optional = true }

# tract-onnx: pure-Rust ONNX inference — no C/Python deps, runs neural nets in-process
tract-onnx = { version = "0.21", optional = true }

# voprf: Verifiable Oblivious PRF (IETF RFC 9497) — private token issuance, rate limiting
# voprf disabled: curve25519-dalek version conflict with opaque-ke
# voprf = { version = "0.5", optional = true }

# Core enhanced functionality that was successfully implemented

# Unix process ID for fork detection
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows memory locking (VirtualLock/VirtualUnlock)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Memory", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_Foundation", "Win32_Security", "Win32_Security_Authorization"] }

[dev-dependencies]
tempfile = "3"
hex = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }
libloading = "0.9"
wat = "1.0"
libc = "0.2"
# craton_hsm-awslc: only available with the enterprise repo; see docs/fips-mode-guide.md
# To run FIPS backend tests locally, clone craton_hsm-enterprise alongside this repo and uncomment:
# craton_hsm-awslc = { path = "../craton_hsm-enterprise/craton_hsm-awslc" }

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "pkcs11_abi_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

# For a tuned build (opt-in, packager-driven), invoke cargo with an
# environment variable — this keeps the default release profile portable
# (x86-64-v1 / aarch64 baseline) while giving operators a one-liner for
# fleets with a known CPU floor:
#
#   RUSTFLAGS="-C target-cpu=x86-64-v3" cargo build --release
#   RUSTFLAGS="-C target-cpu=native"    cargo build --release
#
# See README.md § "Build matrix" for the full tradeoff. Profile-level
# rustflags (stable since Rust 1.79) are deliberately not used so the
# current MSRV (1.75) stays valid.

[profile.bench]
lto = "thin"
codegen-units = 4
