[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "craton-hsm"
description = "Quantum-safe HSM client — in-process via pyo3 or remote via REST"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
dynamic = ["version"]

[tool.maturin]
# pyo3 emits `craton_hsm.so` / `craton_hsm.pyd`; `python-source` lets us add
# a thin Python-layer wrapper that presents the HsmClient(mode=…) facade.
python-source = "python"
module-name = "craton_hsm._native"
features = ["pyo3/extension-module"]
